buttons are hooked up and logging

--- a/index.html
+++ b/index.html
@@ -7,30 +7,33 @@
 <body>
     <div class="curved-borders" id="calculator-container">
         <div class="curved-borders" id="calculator-screen"></div>
+        <div id="clear-button-container">
+            <button class="curved-borders" id="clear-button">Clear</button>
+        </div>
         <div id="buttons-container">
             <div class="row-styles" id="first-row">
-                <button class="button-styles curved-borders" id="number7">7</button>
-                <button class="button-styles curved-borders" id="number8">8</button>
-                <button class="button-styles curved-borders" id="number9">9</button>
-                <button class="button-styles curved-borders" id="division">/</button>
+                <button class="buttons curved-borders" id="number7">7</button>
+                <button class="buttons curved-borders" id="number8">8</button>
+                <button class="buttons curved-borders" id="number9">9</button>
+                <button class="buttons curved-borders" id="division">/</button>
             </div>
             <div class="row-styles" id="second-row">
-                <button class="button-styles curved-borders" id="number4">4</button>
-                <button class="button-styles curved-borders" id="number5">5</button>
-                <button class="button-styles curved-borders" id="number6">6</button>
-                <button class="button-styles curved-borders" id="multiplication">*</button>
+                <button class="buttons curved-borders" id="number4">4</button>
+                <button class="buttons curved-borders" id="number5">5</button>
+                <button class="buttons curved-borders" id="number6">6</button>
+                <button class="buttons curved-borders" id="multiplication">*</button>
             </div>
             <div class="row-styles" id="third-row">
-                <button class="button-styles curved-borders" id="number1">1</button>
-                <button class="button-styles curved-borders" id="number2">2</button>
-                <button class="button-styles curved-borders" id="number3">3</button>
-                <button class="button-styles curved-borders" id="subtract">-</button>
+                <button class="buttons curved-borders" id="number1">1</button>
+                <button class="buttons curved-borders" id="number2">2</button>
+                <button class="buttons curved-borders" id="number3">3</button>
+                <button class="buttons curved-borders" id="subtract">-</button>
             </div>
             <div class="row-styles" id="fourth-row">
-                <button class="button-styles curved-borders" id="number0">0</button>
-                <button class="button-styles curved-borders" id="decimal">.</button>
-                <button class="button-styles curved-borders" id="equals">=</button>
-                <button class="button-styles curved-borders" id="addition">+</button>
+                <button class="buttons curved-borders" id="number0">0</button>
+                <button class="buttons curved-borders" id="decimal">.</button>
+                <button class="buttons curved-borders" id="equals">=</button>
+                <button class="buttons curved-borders" id="addition">+</button>
             </div>
         </div>
     </div>
