fixed if statements so that after operand is selected, number input is sent to secondNum variable

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 </head>
 <body>
     <div class="curved-borders" id="calculator-container">
-        <div class="curved-borders" id="calculator-screen"></div>
+        <div class="curved-borders" id="calculator-screen">
+            <div id="number-line"></div>
+        </div>
         <div id="clear-button-container">
             <button class="curved-borders" id="clear-button">Clear</button>
         </div>
