fixed minor bug

--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
                 <button class="buttons curved-borders" id="number7">7</button>
                 <button class="buttons curved-borders" id="number8">8</button>
                 <button class="buttons curved-borders" id="number9">9</button>
-                <button class="buttons curved-borders" id="division">/</button>
+                <button class="buttons curved-borders" id="/">/</button>
             </div>
             <div class="row-styles" id="second-row">
                 <button class="buttons curved-borders" id="number4">4</button>
                 <button class="buttons curved-borders" id="number5">5</button>
                 <button class="buttons curved-borders" id="number6">6</button>
-                <button class="buttons curved-borders" id="multiplication">*</button>
+                <button class="buttons curved-borders" id="*">*</button>
             </div>
             <div class="row-styles" id="third-row">
                 <button class="buttons curved-borders" id="number1">1</button>
                 <button class="buttons curved-borders" id="number2">2</button>
                 <button class="buttons curved-borders" id="number3">3</button>
-                <button class="buttons curved-borders" id="subtract">-</button>
+                <button class="buttons curved-borders" id="-">-</button>
             </div>
             <div class="row-styles" id="fourth-row">
                 <button class="buttons curved-borders" id="number0">0</button>
-                <button class="buttons curved-borders" id="decimal">.</button>
-                <button class="buttons curved-borders" id="equals">=</button>
-                <button class="buttons curved-borders" id="addition">+</button>
+                <button class="buttons curved-borders" id=".">.</button>
+                <button class="buttons curved-borders" id="=">=</button>
+                <button class="buttons curved-borders" id="+">+</button>
             </div>
         </div>
     </div>
