operand background changes when selected, and background change is removed when secondNum is selected

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <div id="number-line"></div>
         </div>
         <div id="clear-button-container">
-            <button class="curved-borders" id="clear-button">Clear</button>
+            <button class="buttons curved-borders" id="clear-button">Clear</button>
         </div>
         <div id="buttons-container">
             <div class="row-styles" id="first-row">
