--- a/index.html
+++ b/index.html
@@ -10,30 +10,30 @@
             <div id="number-line"></div>
         </div>
         <div id="top-buttons-container">
-            <button class="buttons curved-borders" id="clear-button">Clear</button>
-            <button class="buttons curved-borders" id="backspace-button">Del</button>
+            <button class="buttons curved-borders operators" id="clear-button">Clear</button>
+            <button class="buttons curved-borders operators" id="backspace-button">Del</button>
         </div>
         <div id="buttons-container">
             <div class="row-styles" id="first-row">
-                <button class="buttons curved-borders" id="number7">7</button>
-                <button class="buttons curved-borders" id="number8">8</button>
-                <button class="buttons curved-borders" id="number9">9</button>
+                <button class="buttons number-buttons curved-borders" id="number7">7</button>
+                <button class="buttons number-buttons curved-borders" id="number8">8</button>
+                <button class="buttons number-buttons curved-borders" id="number9">9</button>
                 <button class="buttons curved-borders operators" id="/">/</button>
             </div>
             <div class="row-styles" id="second-row">
-                <button class="buttons curved-borders" id="number4">4</button>
-                <button class="buttons curved-borders" id="number5">5</button>
-                <button class="buttons curved-borders" id="number6">6</button>
+                <button class="buttons number-buttons curved-borders" id="number4">4</button>
+                <button class="buttons number-buttons curved-borders" id="number5">5</button>
+                <button class="buttons number-buttons curved-borders" id="number6">6</button>
                 <button class="buttons curved-borders operators" id="*">*</button>
             </div>
             <div class="row-styles" id="third-row">
-                <button class="buttons curved-borders" id="number1">1</button>
-                <button class="buttons curved-borders" id="number2">2</button>
-                <button class="buttons curved-borders" id="number3">3</button>
+                <button class="buttons number-buttons curved-borders" id="number1">1</button>
+                <button class="buttons number-buttons curved-borders" id="number2">2</button>
+                <button class="buttons number-buttons curved-borders" id="number3">3</button>
                 <button class="buttons curved-borders operators" id="-">-</button>
             </div>
             <div class="row-styles" id="fourth-row">
-                <button class="buttons curved-borders" id="number0">0</button>
+                <button class="buttons number-buttons curved-borders" id="number0">0</button>
                 <button class="buttons curved-borders operators" id=".">.</button>
                 <button class="buttons curved-borders operators" id="=">=</button>
                 <button class="buttons curved-borders operators" id="+">+</button>
